...
    <string name="event_place">Location</string>
    <string name="require_geolocation_for_entrants">Require Geolocation for Entrants</string>
    <string name="event_poster">Event Poster</string>
    <string name="poster_preview">Poster Preview</string>
    <string name="tap_image_to_enlarge">Tap image to enlarge</string>
    <string name="browse_device">Browse Device</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="no_poster_selected">No poster selected</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="update_poster">Update Poster</string>
    <string name="launch_event">Launch Event</string>
    <string name="generate_qr_code">Preview QR Code</string>
...
    <string name="registration_period_ended">Registration Period Over</string>
    <string name="cannot_join_event_lottery_drawn">You can no longer join this event as the lottery has already been drawn.</string>
    <string name="cannot_rejoin_event_title">Cannot Rejoin Event</string>
    <string name="cannot_rejoin_event_message">You previously declined or left this event, so you can no longer rejoin the waitlist.</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="confirm_delete_event">Do you want to delete this event?</string>
    <string name="confirm_delete_image">Do you want to delete this poster image?</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="error_event_id_empty">Event ID is empty</string>
    <string name="event_deleted_successfully">Event deleted successfully</string>
    <string name="failed_to_delete_event">Failed to delete event</string>
    <string name="failed_to_clean_inbox">Failed to clean up user inbox entries. Please retry.</string>
    <string name="failed_to_clean_event_data">Failed to fully clean up event data. Please retry.</string>
...
